# simple_chess_move_gen

./: CMakeLists.txt  README.md  lookup.txt  lookup_generator.cpp  main.cpp
include/: ChessConstants.h  FenParser.h  Game.h  GameState.h  Move.h
src/: FenParser.cpp  GameState.cpp  Move.cpp  Piece.cpp
tests/: MoveGenerationTest.cpp  PerftGenerationTest.cpp
